css/query.css
/* Media Query */
/* BONUS */
@media screen and (max-width: 768px) {
    body{
        width: 100%;
        display: inline-block;
        margin:0;
    }
    
    .row{
        margin: 0;
        font-size: 16px;
        width:100%;
    }
      img{
        height: 18vh;
    }
       #lezioni .row > .right {
        margin-left: 5%;
        width:40%;
    }
    #lezioni .row > .left{
        margin-right: 5%;
    }
    #steps .row > .left, #steps .row > .central, #steps .row > .right {
        float: left;
        width: 30%;
    }
    #steps .row > .central{
        margin:0 5%;
    }   
}
/* / BONUS */

@media screen and (max-width: 420px) {
    body{
      width: 100%;
      display: inline-block;
      margin:0;
    }
    /* style text */
    h1{
      margin-top: 0;
      padding-top: 5px;
    }
    h3{
      margin: 0;
    }
   /* / text style */

   /* Img style */
    img{
      height: 20vh;
    }
    #why .row img {
        background-color: #428bca;
        border-radius: 50%;
        padding: 24px;
        height: 12vh;
    }
    /* / img style */
  
    .row{
      margin: 0;
      font-size: 14px;
      width: 100%;
    }
  
    #lezioni,#why{
    background-color: #f2f2cd;
    }
  
    #lezioni .row > .left, #lezioni .row > .right {
      width: 100%;
      padding-bottom: 20px;
    }
  
    #steps .row > .left, #steps .row > .central, #steps .row > .right {
      width: 100%; 
      padding-bottom: 25px;
    }
    #why .row > .first, #why .row > .second, #why .row > .third {
    margin-top: 35px;
  }
  }

 

